# markov_music2

./: .gitignore  CMakeLists.txt  README.md
Source/: DemoScripts.cpp  DemoScripts.h  FsmModel.h  Main.cpp  SuperColliderHost.cpp  SuperColliderHost.h
